--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </div>
     <div id="welcome-container">
       <h1>Witaj</h1>
-      <p>Twój email z bazy to <span id="user-email">...</span></p>
-      <p>Twoje id to <span id="user-id">...</span></p>
+      <p>Twój email to: <span id="user-email">...</span></p>
+      <p>Twoje ID to: <span id="user-id">...</span></p>
       <button id="logout-btn" class="base-btn">Wyloguj się</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
