--- a/login.html
+++ b/login.html
@@ -10,9 +10,9 @@
     <h1>Login</h1>
     <form id="login-form">
       <input id="login-form-email" class="base-input" type="text" placeholder="Email" />
-      <input id="login-form-password" class="base-input" type="password" placeholder="Password" />
+      <input id="login-form-password" class="base-input" type="password" placeholder="Hasło" />
       <p class="error-message"></p>
-      <button class="base-btn" type="submit">Login</button>
+      <button class="base-btn" type="submit">Zaloguj się</button>
     </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/login.js" type="module"></script>
